name:                 disassembler
version:              0.2.0.0
license:              BSD3
license-file:         LICENSE
category:             Development, Disassembler
author:               Martin Grabmueller <martin@grabmueller.de>
  ,                   Dirk Kleeblatt <klee@cs.tu-berlin.de>
maintainer:           Martin Grabmueller <martin@grabmueller.de>
stability:            experimental
synopsis:             Disassembler for x86-32 and x86-64 machine code
description:          Disassembler for x86-32 and x86-64 machine code
cabal-version:        >= 1.2
build-type:           Simple

library
  hs-source-dirs:     src
  build-depends:      base       >= 4   && < 5
    ,                 containers >= 0.3 && < 1
    ,                 array      >= 0.3 && < 1
    ,                 mtl        >= 1   && < 3
    ,                 parsec     >= 1   && < 4

  extensions:         FlexibleContexts
  exposed-modules:    Text.Disassembler.X86Disassembler
